# PowerRustCOBOL

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  COBOL-DISCLAIMER.md  Cargo.toml  Cobolt_Architecture_Plan.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  build  run
.claude/skills/implement/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/specify/: SKILL.md
.claude/skills/tasks/: SKILL.md
.github/: FUNDING.yml
crates/cobolt-ast/: Cargo.toml
crates/cobolt-ast/src/: data.rs  expr.rs  lib.rs  program.rs  stmt.rs
crates/cobolt-ast/tests/: test_ast_construction.rs
crates/cobolt-cli/: Cargo.toml
crates/cobolt-cli/src/: main.rs
crates/cobolt-codegen/: Cargo.toml
crates/cobolt-codegen/src/: lib.rs
crates/cobolt-compiler/: Cargo.toml
crates/cobolt-compiler/src/: lib.rs
crates/cobolt-forms/: Cargo.toml
crates/cobolt-forms/examples/: gen_sample.rs
crates/cobolt-forms/src/: lib.rs  model.rs  xml.rs
crates/cobolt-ide/: Cargo.toml
crates/cobolt-ide/src/: app.rs  docs_embed.rs  file_dialog.rs  fonts.rs  form_runtime.rs  i18n.rs  llm.rs  main.rs  pdf_export.rs  project_model.rs  runner.rs  theme.rs  version.rs  welcome.rs
crates/cobolt-ide/src/panels/: debugger.rs  designer.rs  doc_viewer.rs  editor.rs  forms_list.rs  md_render.rs  mod.rs  output.rs  project.rs  properties.rs  settings_form.rs  toolbar.rs  toolbox.rs
crates/cobolt-lexer/: Cargo.toml
crates/cobolt-lexer/src/: copybook.rs  keywords.rs  lexer.rs  lib.rs  source.rs  span.rs  token.rs
crates/cobolt-lexer/tests/: test_fixed_form.rs  test_keywords.rs  test_literals.rs
crates/cobolt-media/: Cargo.toml
crates/cobolt-media/src/: lib.rs
crates/cobolt-parser/: Cargo.toml
crates/cobolt-parser/src/: data.rs  error.rs  expr.rs  identification.rs  lib.rs  parser.rs  procedure.rs  stmt.rs
crates/cobolt-parser/tests/: test_data_division.rs  test_exec_rust.rs  test_identification.rs  test_nested_programs.rs  test_redeclaration.rs  test_statements.rs
crates/cobolt-runtime/: Cargo.toml
crates/cobolt-runtime/src/: channels.rs  compress.rs  db_runtime.rs  debugger.rs  environment.rs  error.rs  exec_rust.rs  files.rs  http_runtime.rs  indexed.rs  indexed_disk.rs  indexed_log.rs  indexed_redb.rs  interpreter.rs  lib.rs  numedit.rs  objects.rs  value.rs
crates/cobolt-runtime/tests/: test_accept_sources.rs  test_arith_receivers.rs  test_conditions.rs  test_control_flow.rs  test_copybook.rs  test_file_io.rs  test_file_locking.rs  test_file_output.rs  test_fileio_storage.rs  test_hierarchy.rs  test_indexed.rs  test_indexed_examples.rs  test_indexed_redb.rs  test_initialize.rs  test_inspect.rs  test_intrinsics_date.rs  test_methods.rs  test_nested_programs.rs  test_numeric_edited.rs  test_numeric_precision.rs  test_pointers.rs  test_property_access.rs  test_sort.rs  test_sql.rs  test_string_compare.rs  test_string_defaults.rs  test_transactions.rs
crates/cobolt-semantic/: Cargo.toml
crates/cobolt-semantic/src/: duplicates.rs  exec_rust.rs  lib.rs  resolver.rs  symbol_table.rs  type_checker.rs
crates/cobolt-semantic/tests/: test_duplicates.rs  test_semantic.rs
crates/cobolt-stdlib/: Cargo.toml
crates/cobolt-stdlib/src/: file.rs  intrinsics.rs  io.rs  lib.rs
docs/: cobol85-supported-syntax.md  cobol85-verb-test-matrix.md  database-runtime.md  developers-guide-en.md  developers-guide-es.md  developers-guide-pt.md  developers-guide.md  ide-collaboration-design.md  indexed-file-format.md  indexed-file-internals.md  indexed-redb-engine.md  observability.md
docs/licensing/: CARGO_LICENSE_SNIPPET.toml  GENERATED_CODE_POLICY.md  LEGAL_REVIEW_NOTE.md  README_LICENSE_SUMMARY.md  RECOMMENDED_README_SECTION.md  RUNTIME_LICENSE.md
docs/licensing/HEADER_TEMPLATES/: Markdown.md  Rust.rs  TOML.toml
docs/licensing/PACKAGE_NOTICE_TEMPLATE/: POWER_RUST_COBOL_RUNTIME_NOTICE.txt
specs/: README.md
specs/steering/: product.md  structure.md  tech.md
specs/templates/: plan.md  spec.md  tasks.md
tests/cobol/: CUSTREC.cpy  INNER.cpy  numedit.cbl  numprec.cbl
tests/cobol/arithmetic/: test-arith-size-error.cbl
tests/cobol/call/: test-call-exception.cbl
tests/cobol/conditionals/: test-evaluate.cbl  test-if-conditions.cbl
tests/cobol/copy-replace/: CRADD.CPY  CRBASE.CPY  CRPART.CPY  CRPIC.CPY  CRPROC.CPY  CRREC.CPY  CRSUM.CPY  OUTER.cpy  copytest.cbl  tcpyrep.cbl
tests/cobol/declaratives/: test-declaratives.cbl
tests/cobol/fileio/: .gitignore  STORAGE_VARIANTS.md  fileiot.cbl  fileiot_default_compression.cbl  fileiot_default_disk.cbl  fileiot_storage_disk.cbl  fileiot_storage_disk_compression.cbl  fileiot_storage_memory.cbl  fileiot_storage_memory_compression.cbl  idx_crud.cbl  idx_mem_persist.cbl  idx_persist.cbl  idx_tx.cbl  test-file-conditions.cbl
tests/cobol/indexed-files/: idxbasic.cbl  idxstorage.cbl
tests/cobol/loops/: test-perform.cbl
tests/cobol/numeric-edited-pic/: numedcom.cbl  numeddot.cbl
tests/cobol/search/: test-search.cbl
tests/cobol/sort-merge/: test-sort-merge.cbl
tests/cobol/string-ops/: test-string-overflow.cbl
tests/widgets/: Cargo.toml  agentobject.rs  animator.rs  areachart.rs  barchart.rs  button.rs  checkbox.rs  combobox.rs  datagrid.rs  datetimepicker.rs  donutchart.rs  groupbox.rs  label.rs  line.rs  linechart.rs  listbox.rs  menubar.rs  modalwindow.rs  numericupdown.rs  panel.rs  picturebox.rs  piechart.rs  progressbar.rs  radiobutton.rs  restclient.rs  scatterchart.rs  shape.rs  slider.rs  splitter.rs  sqldatabase.rs  statusbar.rs  tabcontrol.rs  textbox.rs  timer.rs  toolbar.rs  treeview.rs
tests/widgets/src/: lib.rs
tools/: check_bugs.sh
