# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 Emerson Lopes and PowerRustCOBOL contributors
#
# Licensed under the Apache License, Version 2.0.
# See the LICENSE file in the project root for full license information.

[package]
name        = "cobolt-cli"
description = "rcrun — RustCOBOL command-line runtime: `rcrun run myprogram.cbl`"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "rcrun"
path = "src/main.rs"

[dependencies]
cobolt-lexer    = { path = "../cobolt-lexer" }
cobolt-ast      = { path = "../cobolt-ast" }
cobolt-parser   = { path = "../cobolt-parser" }
cobolt-semantic = { path = "../cobolt-semantic" }
cobolt-runtime  = { path = "../cobolt-runtime" }
cobolt-stdlib   = { path = "../cobolt-stdlib" }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }

# Phase 9 — project packaging
serde     = { workspace = true }
toml      = { workspace = true }
zip       = { version = "2", features = ["deflate"] }

# Phase 11 — binary compiler
cobolt-compiler = { path = "../cobolt-compiler" }
