# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 Emerson Lopes and PowerRustCOBOL contributors
#
# Licensed under the Apache License, Version 2.0.
# See the LICENSE file in the project root for full license information.

[package]
name        = "cobolt-compiler"
description = "Cobolt — embed+bundle binary compiler: COBOL project → single native executable"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
cobolt-lexer    = { path = "../cobolt-lexer" }
cobolt-ast      = { path = "../cobolt-ast" }
cobolt-parser   = { path = "../cobolt-parser" }
cobolt-semantic = { path = "../cobolt-semantic" }

serde     = { workspace = true }
toml      = { workspace = true }
bincode   = { workspace = true }
flate2    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
