# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 Emerson Lopes and PowerRustCOBOL contributors
#
# Licensed under the Apache License, Version 2.0.
# See the LICENSE file in the project root for full license information.

[package]
name        = "cobolt-ide"
description = "Cobolt IDE — egui-based COBOL development environment"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "cobolt-ide"
path = "src/main.rs"

[dependencies]
# Core runtime pipeline
cobolt-lexer    = { path = "../cobolt-lexer" }
cobolt-ast      = { path = "../cobolt-ast" }
cobolt-parser   = { path = "../cobolt-parser" }
cobolt-semantic = { path = "../cobolt-semantic" }
cobolt-runtime  = { path = "../cobolt-runtime" }
cobolt-stdlib   = { path = "../cobolt-stdlib" }

# Form designer
cobolt-forms    = { path = "../cobolt-forms" }
cobolt-codegen  = { path = "../cobolt-codegen" }

# Animator widget — animated-image decoding + playback
cobolt-media    = { path = "../cobolt-media" }

# Phase 11 — binary compiler
cobolt-compiler = { path = "../cobolt-compiler" }

# UI framework
egui       = "0.29"
eframe     = { version = "0.29", features = ["default_fonts"] }
egui_extras = { version = "0.29", features = ["image"] }
image       = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp"] }

# System font enumeration (Font property dropdown)
fontdb = "0.23"
# Validate font outlines with the SAME parser egui/epaint uses, so we never feed
# it a face it can't rasterise (e.g. bitmap-only fonts → panic).
ab_glyph = "0.2.32"

# Native file dialogs (opened asynchronously — a synchronous dialog nests the OS
# event loop, which aborts winit 0.30 with "tried to handle event while another
# event is currently being handled").
rfd = "0.14"
pollster = "0.3"

# Project packaging
zip = { version = "2", features = ["deflate"] }

# Serialization (project files)
serde       = { workspace = true }
toml        = { workspace = true }

# Data structures
indexmap    = { workspace = true }

# Logging
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Syntax highlighting (optional — can be feature-gated later)
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
