# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 Emerson Lopes and PowerRustCOBOL contributors
#
# Licensed under the Apache License, Version 2.0.
# See the LICENSE file in the project root for full license information.

[package]
name        = "cobolt-lexer"
description = "Fujitsu COBOL tokenizer for Cobolt IDE — fixed-form and free-form source"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true

[dependencies]
logos     = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
