# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 Emerson Lopes and PowerRustCOBOL contributors
#
# Licensed under the Apache License, Version 2.0.
# See the LICENSE file in the project root for full license information.

[package]
name        = "cobolt-media"
description = "Animated image (GIF/WebP/APNG) decoding + egui playback for the Animator widget"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
egui  = "0.29"
image = { version = "0.25", default-features = false, features = ["gif", "png", "jpeg", "bmp", "webp"] }
