# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 Emerson Lopes and PowerRustCOBOL contributors
#
# Licensed under the Apache License, Version 2.0.
# See the LICENSE file in the project root for full license information.

[package]
name        = "cobolt-parser"
description = "Cobolt COBOL — recursive-descent parser (token stream → AST)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
cobolt-lexer = { path = "../cobolt-lexer" }
cobolt-ast   = { path = "../cobolt-ast" }

[dev-dependencies]
pretty_assertions = { workspace = true }
